--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -44,26 +44,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implemento la estructura con todas las estadisticas de cada jugador\n",
-    "### players es un diccionario que contiene como clave el nombre y como valor una tupla con cada estadistica\n",
-    "#### tupla[0] = goals \n",
-    "#### tupla[1] = goals_avoided \n",
-    "#### tupla[2] = assists"
+    "## Implemento la estructura con todas las estadisticas de cada jugador.\n",
+    "### Players es un diccionario que contiene como clave el nombre y como valor una tupla con cada estadistica\n",
+    "#### Ejemplo :\n",
+    "##### players[\"Yanina\"][0] = 10 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Agustin': (0, 0, 0), 'Yanina': (10, 2, 5), 'Andrés': (4, 0, 1), 'Ariadna': (0, 0, 0), 'Bautista': (5, 5, 5), 'CAROLINA': (14, 2, 2), 'CESAR': (0, 0, 0), 'David': (0, 0, 0), 'Diego': (7, 1, 1), 'Dolores': (2, 2, 2), 'DYLAN': (1, 0, 1), 'ELIANA': (1, 5, 5), 'Emanuel': (1, 5, 5), 'Fabián': (5, 0, 0), 'Noelia': (6, 1, 1), 'Francsica': (1, 0, 0), 'FEDERICO': (1, 2, 2), 'Fernanda': (2, 3, 3), 'GONZALO': (0, 0, 1), 'Nancy': (11, 0, 0)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "players = {}\n",
     "\n",
