Bosquejo inicial de la entrega

--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implemento la estructura con todas las estadisticas de cada jugador.\n",
-    "### Players es un diccionario que contiene como clave el nombre y como valor una tupla con cada estadistica\n",
-    "#### Ejemplo :\n",
-    "##### players[\"Yanina\"][0] = 10 "
+    "### Importo el modulo \"estadisticas\" que contiene todas las funciones a utilizar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import estadisticas "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genero la estructura invocando la funcion constructor()\n",
+    "#### La estructura es un diccionario de tuplas, donde cada key es el nombre del jugador y el valor es una tupla con 3 elementos (goals, goals_avoided_assists)"
    ]
   },
   {
@@ -56,14 +70,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players = {}\n",
-    "\n",
-    "names_without_commas = names_without_commas.split()\n",
-    "\n",
-    "for name, g, ga, a in zip(names_without_commas, goals, goals_avoided, assists):\n",
-    "    players[name] = (g, ga, a)\n",
-    "\n",
+    "players = estadisticas.constructor(names_without_commas, goals, goals_avoided, assists)\n",
     "print(players)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtengo el goleador del equipo invocando la funcion goal_scorer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = estadisticas.goal_scorer(players)\n",
+    "\n",
+    "print(f\"El maximo goleador del equipo es {result} con una cantidad de {players[result][0]} goles\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtengo el jugador mas influyente invocando la funcion mvp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "the_goat = estadisticas.mvp(players)\n",
+    "\n",
+    "print(f\"El jugador/jugadora mas influyente es {the_goat}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtengo el promedio de goles por partido del equipo teniendo en cuenta que se jugaron 25 partidos con la funcion average_goals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_goals_average = estadisticas.goals_average(goals)\n",
+    "\n",
+    "print(f\"El promedio de goles por partido del equipo es {team_goals_average}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obtengo el promedio de goles del goleador/goleadora del equipo con la funcion goal_scorer_average()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_average = estadisticas.goal_scorer_average(players)\n",
+    "\n",
+    "print(f\"El promedio de gol del goleador/goleadora del equipo es {goal_average}\")"
    ]
   }
  ],
