--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtengo el goleador del equipo invocando la funcion goal_scorer()"
+    "### Obtengo el goleador del equipo y su cantidad de goles invocando la funcion goal_scorer()"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "source": [
     "result = estadisticas.goal_scorer(players)\n",
     "\n",
-    "print(f\"El maximo goleador del equipo es {result} con una cantidad de {players[result][0]} goles\")"
+    "print(f\"El goleador/goleadora del equipo es {result[0]} con una cantidad de {result[1]} goles\")"
    ]
   },
   {
