--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "### Genero la estructura invocando la funcion constructor()\n",
-    "#### La estructura es un diccionario de tuplas, donde cada key es el nombre del jugador y el valor es una tupla con 3 elementos (goals, goals_avoided_assists)"
+    "#### La estructura es un diccionario de tuplas, donde cada key es el nombre del jugador y el valor es una tupla con 3 elementos (goals, goals_avoided,assists)"
    ]
   },
   {
