--- a/ejercicio10.ipynb
+++ b/ejercicio10.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importo nombre y estadisticas de cada jugador"
+    "#### Importo nombre y estadisticas de cada jugador"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Limpio comas de la variable names"
+    "#### Limpio comas de la variable names"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importo el modulo \"estadisticas\" que contiene todas las funciones a utilizar"
+    "#### Importo el modulo \"estadisticas\" que contiene todas las funciones a utilizar"
    ]
   },
   {
@@ -60,8 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Genero la estructura invocando la funcion constructor()\n",
-    "#### La estructura es un diccionario de tuplas, donde cada key es el nombre del jugador y el valor es una tupla con 3 elementos (goals, goals_avoided,assists)"
+    "#### Genero la estructura invocando la funcion constructor(). La estructura es un diccionario de tuplas, donde cada key es el nombre del jugador y el valor es una tupla con 3 elementos (goals, goals_avoided,assists)"
    ]
   },
   {
@@ -78,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtengo el goleador del equipo y su cantidad de goles invocando la funcion goal_scorer()"
+    "#### Obtengo el goleador del equipo y su cantidad de goles invocando la funcion goal_scorer(). Esta funcion devuelve una tupla con el nombre del goleador y la cantidad de goles"
    ]
   },
   {
@@ -96,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtengo el jugador mas influyente invocando la funcion mvp()"
+    "#### Obtengo el jugador mas influyente invocando la funcion mvp(). La funcion mvp invoca a otra funcion que devuelve una lista con el promedio ponderado de los jugadores. Mvp recorrer la lista y devuelve el nombre del jugador mas influyente"
    ]
   },
   {
@@ -114,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtengo el promedio de goles por partido del equipo teniendo en cuenta que se jugaron 25 partidos con la funcion average_goals()"
+    "#### Obtengo el promedio de goles por partido del equipo teniendo en cuenta que se jugaron 25 partidos con la funcion average_goals()"
    ]
   },
   {
@@ -132,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtengo el promedio de goles del goleador/goleadora del equipo con la funcion goal_scorer_average()"
+    "#### Obtengo el promedio de goles del goleador/goleadora del equipo con la funcion goal_scorer_average()"
    ]
   },
   {
